<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical">

    <!--VIEW 1 -->
    <LinearLayout
        android:id="@+id/content_group_one"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/plainTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_text_group_one"
            android:inputType="textCapWords"
            android:padding="16dp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_description" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/start_button"
            android:onClick="startButton"
            android:padding="16dp"
            android:text="@string/start_button"
            android:textAllCaps="true" />

        <ImageView
            android:id="@+id/welcomeMapImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/welcomeMapImage"
            android:padding="16dp"
            android:src="@drawable/legomap" />

    </LinearLayout>

    <!--VIEW 2 -->
    <LinearLayout
        android:id="@+id/content_group_two"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content_group_two_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_two_text"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="20sp">

            <RadioButton
                android:id="@+id/radio_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="checkButton"
                android:text="@string/radio_one" />

            <RadioButton
                android:id="@+id/radio_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/radio_two" />

            <RadioButton
                android:id="@+id/radio_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/radio_three" />

            <RadioButton
                android:id="@+id/radio_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkButton"
                android:text="@string/radio_four" />
        </RadioGroup>

        <Button
            android:id="@+id/nextButtonOne"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="nextButton"
            android:text="@string/nextButton" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="Image of Snake River"
            android:src="@drawable/snakeriver" />

    </LinearLayout>

    <!--VIEW 3 -->
    <LinearLayout
        android:id="@+id/content_group_three"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content_group_three_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/group_three_text" />

        <EditText
            android:id="@+id/subwayCityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textCapWords" />

        <Button
            android:id="@+id/nextButtonTwo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:onClick="nextButton"
            android:text="@string/nextButton" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="Image of early Boston subway"
            android:src="@drawable/bostonsubway" />

    </LinearLayout>

    <!--VIEW 4 -->
    <LinearLayout
        android:id="@+id/content_group_four"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content_group_four_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/group_four_text" />

        <EditText
            android:id="@+id/skyscraperCityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:inputType="textCapWords" />

        <Button
            android:id="@+id/nextButtonThree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="nextButton"
            android:text="@string/nextButton" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/rkoteetime" />


    </LinearLayout>

    <!--VIEW 5 -->
    <LinearLayout
        android:id="@+id/content_group_five"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content_group_five_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_five_text" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_one"
                android:text="@string/check_one"
                android:onClick="checkbox"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/check_two"
                android:text="@string/check_two"
                android:onClick="checkbox"/>

        <Button
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="nextButton"
            android:text="@string/nextButton" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/oregontrail" />

    </LinearLayout>

    <!--VIEW 6 -->
    <LinearLayout
        android:id="@+id/content_group_six"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/content_group_submission"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:text="@string/submissionText" />

        <Button
            android:id="@+id/submitScoreButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="checkButton"
            android:text="@string/submitScoreButton" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/displayMessage"
            android:text=""/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/theend" />

    </LinearLayout>


</LinearLayout>

